--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">VkFeeds</string>
+    <string name="news">Новости</string>
+    <string name="favourite">Избранное</string>
+    <string name="profile">Профиль</string>
 </resources>
